Fixed spelling error on booking page

--- a/book-now.html
+++ b/book-now.html
@@ -45,7 +45,7 @@
     <section class="container big-pad-top pad-bottom">
         <h2 class="text-primary">Be One of The First to Visit Mars</h2>
         <p> 
-            We are offering an experience like no other. A week-long spaceship cruise to Mars. A week-long stay at a Martian Resort and finally, a week-long cruise back to Earth. Turn your wildest dreams into realiy and be sure not to miss this once-in-a-lifetime oppurtunity. 
+            We are offering an experience like no other. A week-long spaceship cruise to Mars. A week-long stay at a Martian Resort and finally, a week-long cruise back to Earth. Turn your wildest dreams into reality and be sure not to miss this once-in-a-lifetime oppurtunity. 
         </p>
     </section>
 
