Fixed typo on homepage

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="container flex lg-column sm-column">
                     <h3>Fun Activities</h3>
-                    <p>From off-road racing, sand tobogganing and awesome space-themed workships there is much to enjoy.</p>
+                    <p>From off-road racing, sand tobogganing and awesome space-themed workshops there is much to enjoy.</p>
                     <div class="flex center-x"> 
                         <a href="things-to-do.html" class="btn">Learn More</a>
                     </div>
